--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         body { background-color: #0f172a; margin: 0; }
         .glass-effect { background: rgba(30, 41, 59, 0.7); backdrop-filter: blur(12px); }
     </style>
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="icon" type="image/png" href="/icon.png" />
   </head>
   <body>
     <div id="root"></div>
